--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,10 @@
 apply plugin: 'com.android.application'
 
 android {
+    compileOptions {
+        targetCompatibility = "8"
+        sourceCompatibility = "8"
+    }
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.sampleitunessearch"
@@ -27,10 +31,13 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.squareup.retrofit2:retrofit:2.7.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.7.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.4.0'
+
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
     implementation "com.google.android.material:material:1.2.0-alpha05"
     // CardView
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.exoplayer:exoplayer:2.11.2'
+
 }
