RecyclerView fetching the list of songs. Todo// Imlement exoplayer

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ android {
         targetCompatibility = "8"
         sourceCompatibility = "8"
     }
+
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.sampleitunessearch"
@@ -38,6 +39,8 @@ dependencies {
     implementation "com.google.android.material:material:1.2.0-alpha05"
     // CardView
     implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'com.google.android.exoplayer:exoplayer:2.11.2'
+
 
 }
